2002-03-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: lossyCString_u() handle case where cString
	contains more bytes than unicode string has characters.
	* Tools/gdomap.c: Suppress unnecessary warnings except under debug.
	Implement spawning to run as daemon under windoze.
	* Toolds/gdnc.m: Run as daemon under windoze.
	* Source/GSTcpPort.m: Fix to stop multiple servers trying to use
	the same port under windoze.
	* Source/WindowsFileHandle.m: Fix to stop multiple servers trying to use
	the same port under windoze.  Fix to return gdomap port even if
	getservbyname() doesn't.
	* Source/UnixFileHandle.m: Fix to return gdomap port even if
	getservbyname() doesn't.
	* Source/NSTask.m: Try appending .exe extension to paths under windoze.
	* Source/Unicode.m: GSFromUnicode() fix lossy conversion  for cases
	where output encoding can't handle the unicode.

2002-03-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: lossyCString_c() fix in line with recent
	changes ... cope with case where internal coding is not same as
	external coding.
	lossyCString_u() fix encoding used.

2002-03-18  Adam Fedor  <fedor@gnu.org>

	* Tools/gdomap.c (gdomap_log): Write to stdout if prio=LOG_INFO.

2002-03-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Unicode.m: Some boundary error fixes by Alexander Malmberg.
	Fixes to encoding table initialisation.
	* Source/NSString.m:Fix error in encoding type for initialising from
	data.  By Alexander Malmberg.
	* Source/GSString.m: Correct string length when transmuting an 8-bit
	string to a 16-bit string - by Alexander Malmberg.

2002-03-17  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/GSAttributedString.m 
	([GSMutableAttributedString -replaceCharactersInRange:withString:]): 
	Only keep attribute #0 when removing it would remove all attributes.
	(patch by Alexander Malmberg)

2002-03-16  Adam Fedor  <fedor@gnu.org>

	* configure.in: Also configure SSL.
